3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

common/{item.c,treasure.c}, server/{apply.c,gods.c,spell_effect.c}: Use named
   constants instead of numbers.
server/monster.c: Use correct field name in move_monster().
Andreas Kirschbaum 2006-01-07

Summon pets less often to the owner on tiled maps.
--
server/pets.c: In remove_all_pets() and pet_move() use on_same_map() to check
   whether the pet is too far away.
Andreas Kirschbaum 2006-01-07

Change meaning of "items are on same map": for tiled maps now two objects are
also considered to be on the same map if they are on diagonally adjacent maps.
This solves the issue that a pet can be only one tile away from the owner but
still considered not to be on the same map.
--
common/map.c: In on_same_map() also consider diagonally adjacent maps.
Andreas Kirschbaum 2006-01-07

Added regions support for plugins. Affected files:
 include/plugin.h sproto.h
 server/plugins.c
--
Added regions to Python plugin. Affected files:
 cfpython/include/cfpython.h cfpython_map_private.h
 cfpython/cfpython.c cfpython_map.c cfpython_region.c Makefile.am Makefile.in
New files:
 cfpython/include/cfpython_region.h cfpython_region_private.h
 cfpython/cfpython_region.c
--
In Python's Object, Archetype is now a property and not a method. Affected files:
 cfpython/include/cfpython_object_private.h
 cfpython/cfpython_object.c
--
Cleaned obsolete include/plugproto.h. 
Ryo 2006-01-07

Make teleporters hidden below the floor work again.
--
server/time.c: In move_teleporter() use object above floor instead above
   teleporter to operate one.
Andreas Kirschbaum 2006-01-07

Fix issues with map tiling.
--